--- a/package.json
+++ b/package.json
@@ -8,5 +8,13 @@
   "dependencies": {
     "discord.js": "^11.5.1",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.6",
+    "typescript": "^3.7.2"
+  },
+  "scripts": {
+    "build": "tsc",
+    "start": "node build/bot.js"
   }
 }
