--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
 		"target": "es2016",
 		"resolveJsonModule": true,
 		"esModuleInterop": true,
-		"outDir": "./build"
+		"outDir": "./build",
+		"strict": true
 	},
 	"exclude": [
 		"node_modules",
