--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "main": "bot.js",
   "author": "SmartDevil",
   "dependencies": {
+    "@types/ical": "^0.6.1",
     "discord.js": "^11.5.1",
+    "ical": "^0.6.0",
+    "node-schedule": "^1.3.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.6",
+    "@types/node-schedule": "^1.2.4",
     "prettier": "1.18.2",
     "typescript": "^3.7.2"
   },
