--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "author": "SmartDevil",
   "dependencies": {
     "@types/ical": "^0.6.1",
+    "@types/request-promise-native": "^1.0.17",
     "discord.js": "^11.5.1",
     "ical": "^0.6.0",
     "node-schedule": "^1.3.2",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.8",
     "winston": "^3.2.1"
   },
   "devDependencies": {
