Add voice system

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
 		"resolveJsonModule": true,
 		"esModuleInterop": true,
 		"outDir": "./build",
-		"strict": true
+		"strict": true,
+		"skipLibCheck": true
 	},
 	"exclude": [
 		"node_modules",
