--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "discord.js": "^11.5.1",
     "ical": "^0.6.0",
     "node-schedule": "^1.3.2",
+    "prism-media": "^1.1.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
+    "stream-buffers": "^3.0.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/ical": "^0.6.1",
-    "@types/request-promise-native": "^1.0.17",
     "@types/node": "^12.12.6",
     "@types/node-schedule": "^1.2.4",
+    "@types/request-promise-native": "^1.0.17",
+    "@types/stream-buffers": "^3.0.3",
     "prettier": "1.19.0",
     "typescript": "^3.7.2"
   },
