--- a/.github/workflows/install-build.yml
+++ b/.github/workflows/install-build.yml
@@ -21,5 +21,8 @@ jobs:
     - name: Install
       run: npm install
       
+    - name: Prepare config file
+      run: cp sample_auth.json auth.json
+      
     - name: Build
       run: npm run build
