--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"main": "bot.js",
 	"author": "SmartDevil",
 	"dependencies": {
-		"discord.js": "^13.0.0",
+		"@discordjs/rest": "^0.1.0-canary.0",
+		"discord-api-types": "^0.23.1",
+		"discord.js": "^13.1.0",
 		"ical": "^0.6.0",
 		"node-schedule": "^1.3.2",
 		"prism-media": "^1.1.0",
@@ -22,7 +24,7 @@
 		"@types/request-promise-native": "^1.0.17",
 		"@types/stream-buffers": "^3.0.3",
 		"prettier": "1.19.0",
-		"typescript": "^3.7.2"
+		"typescript": "^4.4.3"
 	},
 	"scripts": {
 		"build": "tsc",
