--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
 		"@types/request-promise-native": "^1.0.17",
 		"@types/stream-buffers": "^3.0.3",
 		"prettier": "1.19.0",
+		"tsc-watch": "^4.5.0",
 		"typescript": "^4.4.3"
 	},
 	"scripts": {
 		"build": "tsc",
 		"start": "node build/bot.js",
-		"format": "prettier --write \"**/*.ts\""
+		"format": "prettier --write \"**/*.ts\"",
+		"dev": "tsc-watch --onSuccess \"npm start\""
 	},
 	"prettier": {
 		"useTabs": true,
