--- a/package.json
+++ b/package.json
@@ -6,18 +6,9 @@
 	"main": "bot.js",
 	"author": "SmartDevil",
 	"dependencies": {
-		"discord.js": "^13.1.0",
-		"request": "^2.88.0",
-		"request-promise-native": "^1.0.8",
-		"stream-buffers": "^3.0.2",
-		"winston": "^3.2.1"
+		"discord.js": "^13.1.0"
 	},
 	"devDependencies": {
-		"@types/ical": "^0.6.1",
-		"@types/node": "^12.12.6",
-		"@types/node-schedule": "^1.2.4",
-		"@types/request-promise-native": "^1.0.17",
-		"@types/stream-buffers": "^3.0.3",
 		"prettier": "1.19.0",
 		"tsc-watch": "^4.5.0",
 		"typescript": "^4.4.3"
