All changes to make the docker deployment work

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"scripts": {
 		"build": "tsc",
 		"start": "node build/bot.js",
+		"start-docker": "node bot.js",
 		"format": "prettier --write \"**/*.ts\"",
 		"dev": "tsc-watch --onSuccess \"npm start\""
 	},
