--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,10 +10,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
+    - name: Use Node.js v16
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+
+    - name: Install
+      run: npm install
+      
+    - name: Build
+      run: npm run build
+
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag kirkbot:latest
+
     - name: Create iso
       run: docker image save -o image.tar kirkbot:latest
+
     - uses: actions/upload-artifact@v4
       with:
         name:
