Change artifact name

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,7 +31,7 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name:
-          footiebottie
+          kirkbot
         path:
           image.tar
         if-no-files-found:
