--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,6 +25,7 @@ jobs:
 
   build-docker:
     name: Build & Publish Docker contailer
+    runs-on: ubuntu-latest
     steps:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag kirkbot:latest
