--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-typescript:
-    name: Build Typescript project
+    name: Build project & publish Docker
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -23,11 +23,6 @@ jobs:
     - name: Build
       run: npm run build
 
-  build-docker:
-    name: Build & Publish Docker contailer
-    runs-on: ubuntu-latest
-    needs: build-typescript
-    steps:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag kirkbot:latest
 
